--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
  }
 
 .sliding-background {
-    background: url("files/bgimage.svg") repeat-x;
+    background: url("https://bella7898.github.io/test/bgimage.png") repeat-x;
     background-position-y: relative;
     height: 961px;
     width: 6000px;
